# bus-fare-cap

./: README.md  fancy_timeline_fragment.html  pyproject.toml  run_pipeline.py  uk.json  uk_tax_benefit_timeline.artifact.json  uk_tax_benefit_timeline.html
.github/workflows/: pull_request.yaml
dashboard/: next.config.js  package.json
dashboard/app/: layout.jsx  page.jsx
dashboard/public/data/: bus_fare_cap_results.json
dashboard/src/components/: BaselineTab.jsx  BreakdownChart.jsx  ChartLogo.jsx  MethodologyTab.jsx  ReformTab.jsx
dashboard/src/lib/: dataHelpers.js  formatters.js
data/: bus_fare_cap_results.json
src/bus_fare_cap/: __init__.py  cli.py  formulas.py  pipeline.py  sources.py
tests/: test_formulas.py  test_results.py
