[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bus-fare-cap"
version = "0.1.0"
description = "Analysis of the announced 2027 £2 bus fare cap in England outside London."
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
authors = [{ name = "PolicyEngine" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "tables>=3.9",
  "huggingface_hub>=0.20",
  # The policyengine.py wrapper; the [uk] extra exact-pins policyengine-uk, so
  # the bundle version alone identifies the whole simulation stack. The Populace
  # UK dataset is loaded via policyengine.tax_benefit_models.uk.
  "policyengine[uk]>=4.17.10",
  # person_bus_fare_spending and gov.dft.bus.fare_allocation_weight_by_age,
  # which this analysis reads instead of allocating fares itself.
  "policyengine-uk>=2.89.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
bus-fare-cap-build = "bus_fare_cap.cli:main"

[project.urls]
Homepage = "https://github.com/PolicyEngine/bus-fare-cap"
Repository = "https://github.com/PolicyEngine/bus-fare-cap"

[tool.hatch.build.targets.wheel]
packages = ["src/bus_fare_cap"]

[tool.hatch.build.targets.sdist]
include = ["src/bus_fare_cap/**/*.py", "tests/**/*.py", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]
